# remote_storage

./: .gitignore  Cargo.toml  README.md  remote_storage.service  schema.sql
src/: main.rs
static/: index.html  remoteStorage.js
