[package]
name = "remote_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
sqlx = {version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite"]}
tokio = { version = "1.30.0", features = ["full"] }
axum = "0.6.20"
dotenv = "0.15.0"
regex = "1.9.5"
axum-server = {version = "0.5.1", features = ["tls-rustls"]}
tower-http = {version = "0.4.4", features = ["cors"]}